Bug 1302341 - Part 1: SVGAElement focus checks tabIndex first and to be 0 by default; r=heycam

MozReview-Commit-ID: BjT03C3aYUK